--- a/src/assets/languages/id.json
+++ b/src/assets/languages/id.json
@@ -200,7 +200,10 @@
       "yes_continue": "Ya, lanjutkan",
       "no_cancel": "Tidak, batalkan",
       "create": "BUAT",
-      "check": "CHECK"
+      "check": "CHECK",
+      "filter": "FILTER",
+      "submit": "SUBMIT",
+      "download_file": "Download File"
     },
     "area": {
       "national": "National",
@@ -264,7 +267,8 @@
       "file_extension": "Ekstensi File wajib {{type}}!",
       "please_reupload": "Silahkan unggah ulang {{entity}}",
       "reupload_invalid": "Data {{entity}} tidak Valid, mohon mengunggah ulang.",
-      "failed_upload_reffer_export": "Upload gagal, file yang diupload tidak sesuai. Mohon periksa kembali file Anda, atau pilih Eksport File sebagai acuan File Anda."
+      "failed_upload_reffer_export": "Upload gagal, file yang diupload tidak sesuai. Mohon periksa kembali file Anda, atau pilih Eksport File sebagai acuan File Anda.",
+      "requesting": "Requesting"
     }
   },
   "login": {
@@ -893,7 +897,20 @@
       "text9": "Nama Kategori Toolbox",
       "text10": "Pilih Status",
       "text11": "Apakah anda yakin untuk menghapus Kategori Toolbox ini?",
-      "text12": "Hapus Kategori Toolbox"
+      "text12": "Hapus Kategori Toolbox",
+      "verification_remark": "Verification Remark",
+      "delete_mission_type": "Hapus Tipe Misi",
+      "edit_mission_type": "Edit Tipe Misi",
+      "mission_type_name": "Nama Tipe Misi",
+      "delete_internal_category": "Hapus Internal Kategori",
+      "internal_category_name": "Nama Internal Kategori",
+      "internal_category_name_exists": "Nama Internal Kategori sudah ada, silahkan input nama lain",
+      "copywriting_color": "Warna copywriting",
+      "delete_mission_category": "Hapus Kategori Misi",
+      "category_mission_name": "Nama Kategori Misi",
+      "delete_project_mission": "Hapus Project Misi",
+      "delete_verification_remark": "Hapus Verification Remark",
+      "delete_copywriting": "Hapus Copywriting"
     },
     "template_tugas": {
       "text1": "Template Tugas",
@@ -979,7 +996,29 @@
       "other_explain": "Lainnya, Sebutkan",
       "complete_question_message": "Ada pertanyaan belum di isi, silahkan lengkapi pengisian",
       "please_select_ir": "Silahkan pilih salah satu IR Type",
-      "updated_data": "Data Berhasil Diubah"
+      "updated_data": "Data Berhasil Diubah",
+      "select_reason": "Pilih Alasan",
+      "not_selected_image": "Gambar untuk template tugas belum dipilih!",
+      "not_filled_blocker_submission": "Blocker Submission belum diisi",
+      "not_created_question_min_one": "Pertanyaan belum dibuat, minimal ada satu pertanyaan!",
+      "not_created_copywriting": "Copywriting belum dibuat, minimal ada satu Copywriting",
+      "please_complete_copywriting_setup": "Silahkan lengkapi Copywriting Set-Up",
+      "task_personalize": "Tugas Personalize",
+      "template_name": "Nama Template",
+      "select_mision_type": "Pilih salah satu Tipe Misi",
+      "internal_mission_category": "Internal Kategori Misi",
+      "internal_category_mission_notfound": "Tidak ada Internal kategori misi yang ditemukan",
+      "add_copywriting": "Add copywriting",
+      "copywriting_info": "Gunakan tanda <strong>##1</strong>, <strong>##2</strong>, <strong>##3</strong>,... sebagai parameter pada <strong>Judul Misi</strong> dan <strong>Deskripsi Misi</strong>",
+      "mission_title": "Judul Misi",
+      "mission_description": "Deskripsi Misi",
+      "mission_cover": "Cover Misi",
+      "parameter_not_required": "Tidak perlu menggunakan parameter",
+      "visual_header": "Visual Header",
+      "question_list": "List Pertanyaan",
+      "question_list_info": "Gunakan tanda <strong>##1</strong>, <strong>##2</strong>, <strong>##3</strong>,... sebagai parameter pada <strong>Judul Pertanyaan</strong>",
+      "blocker_submission": "Blocker Submission",
+      "image_quality_detection": "Image Quality Detection"
     },
     "group_trade_program": {
       "text1": "Group Trade Program",
@@ -994,7 +1033,9 @@
       "text10": "Buat Group Trade Program",
       "text11": "Tarik Gambar Kesini atau Pilih File",
       "text12": "Ukuran 410x210 Pixel",
-      "text13": "Gambar Maksimal 2 mb"
+      "text13": "Gambar Maksimal 2 mb",
+      "program_name": "Nama Program",
+      "audience_name": "Nama Audience"
     },
     "trade_program": {
       "text1": "Trade Program",
@@ -1007,7 +1048,9 @@
       "text8": "Trade Program Sedang Berjalan",
       "text9": "Hapus Trade Program",
       "text10": "Apakah anda yakin untuk menghapus trade program ini?",
-      "group_trade_program_not_found": "Tidak ada Group Trade Program yang ditemukan"
+      "group_trade_program_not_found": "Tidak ada Group Trade Program yang ditemukan",
+      "balance": "Dana",
+      "coin_expiry_date": "Tanggal Kadaluarsa Coin"
     },
     "pengatur_jadwal_program": {
       "text1": "Pengatur Jadwal Trade Program",
@@ -1063,7 +1106,44 @@
       "this_request_adjusment": "request adjustment coin ini ?",
       "do_approve": "menyetujui",
       "do_reject": "menolak",
-      "read_only_access": "Kamu hanya memiliki akses untuk melihat Tombol Notifikasi, tidak dapat mengirimkan Notifikasi! (permission.ubah)"
+      "read_only_access": "Kamu hanya memiliki akses untuk melihat Tombol Notifikasi, tidak dapat mengirimkan Notifikasi! (permission.ubah)",
+      "export_approval_coin_adjustment": "Export Approval Coin Adjustment",
+      "tsm_title": "Approval Coin Adjustment TSM",
+      "approved": "Approved",
+      "rejected": "Rejected",
+      "pending": "Pending",
+      "approval_history": "Approval History",
+      "send_notif": "KIRIM NOTIFIKASI",
+      "scheduler_name": "Nama Pengatur Jadwal",
+      "total_coin_inject": "Total Coin / Inject",
+      "approval_requested_date": "Tanggal Request Approval",
+      "retailer_name": "Nama Retailer",
+      "total_coin": "Jumlah Total Coin",
+      "total_coin_group_trade_program": "Jumlah Coin Group Trade Program",
+      "total_adjustment_coin": "Jumlah Adjustment Coin",
+      "approve_button": "APPROVE",
+      "reject_button": "REJECT",
+      "person": "Person",
+      "retailer_id": "Retailer ID",
+      "retailer_status": "Status Retailer",
+      "current_coin_total": "Current Coin (Total)",
+      "current_coin_group": "Current Coin (Group Trade Program)",
+      "coin_adjusted": "Coin Adjusted",
+      "reason": "Alasan",
+      "coin_adjustment_reason": "Alasan Adjusment Coin",
+      "approval": "Approval",
+      "receiver_name": "Nama User Penerima",
+      "search_user_name": "Cari Nama User ...",
+      "user_not_found": "User Tidak ditemukan!",
+      "receiver_email": "Email Penerima",
+      "request_preview_onprogress": "Proses Request Preview Masih Berjalan!",
+      "request_import_onprogress": "Proses Request Import Masih Berjalan!",
+      "failed_upload": "Upload gagal, file yang diupload tidak sesuai. Mohon periksa kembali file Anda.",
+      "not_set_notification_user": "User Notifikasi Belum Di set!",
+      "preview_not_available": "Data Preview Tidak ada!",
+      "confirmation": "Konfirmasi",
+      "submit_confirmation_message": "Apakah anda yakin ingin menyimpan data ini (Notifikasi Akan langsung diproses kepada Penerima) ?",
+      "save_success_notification_sent": "Berhasil menyimpan data dan mengirimkan Notifikasi!"
     },
     "audience": {
       "audience_personalize": "Audience Personalize",
@@ -1165,7 +1245,23 @@
       "text41": "Total Budget Used",
       "text42": "Total Week Duration",
       "text43": "Ada Notifikasi yang belum diSet",
-      "text44": "Bagian Task Template Misi Wajib diisi"
+      "text44": "Bagian Task Template Misi Wajib diisi",
+      "default": "Default",
+      "request_file": "Request File",
+      "export_task_sequencing": "Eksport Task Sequencing",
+      "edit_task_sequencing": "Edit Task Sequencing",
+      "delete_task_sequencing": "Hapus Task Sequencing",
+      "personalize_management": "Personalize Management",
+      "view_permission_denied": "Tidak memiliki akses Lihat Publish Misi",
+      "export_coin": "EXPORT COIN",
+      "import_coin": "IMPORT COIN",
+      "requesting_file": "Requesting File",
+      "select_trade_program": "Pilih salah satu trade program",
+      "select_group_audience": "Pilih salah satu group audience",
+      "check_detail": "CEK DETIL",
+      "coin_adjustment_confirm": "Coin adjustment terakhir sudah pernah dilakukan untuk Task Sequencing ini pada tanggal {{date}}. Apakah mau melanjutkan proses pengajuan ini?",
+      "requesting_preview": "Requesting Preview",
+      "task_sequencing_personalize": "Task Sequencing Personalize"
     },
     "task_verification": {
       "text1": "Task Verification",
@@ -1197,7 +1293,23 @@
       "text17": "Target Penerima",
       "text18": "Filter Audience",
       "text19": "Targeted Retailer",
-      "text20": "Ubah Coin Disbursement"
+      "text20": "Ubah Coin Disbursement",
+      "export_detail": "Export Detail",
+      "download_list_failed": "Terjadi kesalahan saat mendownload Data List Penukaran",
+      "coin_exchange_list": "List Penukaran Koin",
+      "export_detail_by_trade_program": "Export Detail by trade program",
+      "retailer_code": "Retailer Code",
+      "src_store": "Toko SRC",
+      "exchange_nominal": "Nominal Penukaran",
+      "payment_amount": "Nominal Pembayaran",
+      "unpaid": "Belum Terbayar",
+      "paid": "Sudah Dibayar",
+      "failed_to_pay": "Gagal Bayar",
+      "pay_corner_account": "Akun Pojok Bayar",
+      "failed_upload_inconsistent_name": "Upload gagal, Nama Program Penukaran yang diupload tidak sesuai.",
+      "failed_upload_invalid_file": "Upload gagal, file yang diupload tidak sesuai. Mohon periksa kembali file Anda.",
+      "coin_valuation": "Coin Valuation",
+      "coin_valuation_more_than_zero": "Coin Valuation harus lebih dari > 0"
     }
   },
   "cn_reward": {
