translation-sprint-04-2022: - missing translation notification_type

--- a/src/assets/languages/id.json
+++ b/src/assets/languages/id.json
@@ -1510,7 +1510,8 @@
       "month_repeatation": "Bulan pengulangan",
       "send_period": "Periode Pengiriman",
       "release_time": "Waktu Terbit",
-      "send_every": "Dikirim setiap"
+      "send_every": "Dikirim setiap",
+      "notification_type": "Tipe Notifikasi"
     },
     "popup_notifikasi": {
       "page_name": "Popup Notifikasi",
