translation-sprint-04-2022: - translation audience, gtp, popup notif

--- a/src/assets/languages/id.json
+++ b/src/assets/languages/id.json
@@ -164,7 +164,30 @@
       "qry": "QTY",
       "list_entity": "Daftar {{entity}}",
       "all_type": "Semua Tipe",
-      "consumer": "Consumer"
+      "consumer": "Consumer",
+      "failed": "Failed",
+      "processing": "Processing",
+      "no_status": "No Status",
+      "please_import_file": "Silahkan import file terlebih dahulu",
+      "checking_success": "Proses Check Berhasil",
+      "min_audience": "tidak boleh kurang dari jumlah minimal audience",
+      "failed_import": "Gagal mengimport Data!",
+      "invalid_data_double_check": "Ada kesalahan pada data. Periksa kembali data Anda",
+      "import_template": "Import Template",
+      "all_zone": "Semua Zone",
+      "all_regional": "Semua Regional",
+      "all_area": "Semua Area",
+      "all_salespoint": "Semua Salespoint",
+      "all_district2": "Semua District",
+      "all_territory": "Semua Territory",
+      "no_selected_video_content": "Konten video belum dipilih",
+      "drag_video_or_select": "Tarik Video kesini atau <strong>pilih file</strong>",
+      "month": "Bulan",
+      "select_area_to_export":"Pilih area untuk di ekspor!",
+      "please_recheck": "Silahkan cek kembali",
+      "file": "File",
+      "you_uploaded": "yang anda upload!",
+      "area_code": "Kode Area"
     },
     "order_status": {
       "new_order": "Pesanan Baru",
@@ -1208,7 +1231,23 @@
       "text14": "SRC Classification",
       "text15": "SRC Type",
       "text16": "Daftar AYO",
-      "total_required_panel": "Total Required Panel"
+      "total_required_panel": "Total Required Panel",
+      "downloading_template": "Downloading Template",
+      "population_blast": "Population Blast",
+      "recommended_panel": "Recommended Panel",
+      "min_audience": "Jumlah Audience yang dipilih kurang dari {{min}} Audience",
+      "max_audience": "Jumlah Audience yang dipilih melebihi dari {{max}} Audience",
+      "max_funds": "Jumlah Dana Permintaan melebihi dari Jumlah Dana Trade Program, Selisih Dana : {{funds}}!",
+      "please_select_audience": "Belum ada Audience yang dipilih!",
+      "on_process_data": "Data Sedang Diproses",
+      "please_wait": "Mohon tunggu 5 - 10 menit",
+      "back_to_dashboard": "Kembali ke Dashboard",
+      "cancel_check": "Batalkan Check",
+      "blasted_time": "Blasted Time",
+      "error_validation": "Error Validation",
+      "failed_preview": "Gagal Preview Data",
+      "confirm_leave": "Perhatian: Data Anda belum tersimpan. Tekan Cancel untuk kembali dan lakukan simpan terlebih dahulu, atau tekan OK untuk meninggalkan halaman ini.",
+      "file_import_success_press_ok": "File berhasil diimport, tekan OK untuk kembali ke menu awal."
     },
     "distribution_list": {
       "text": "Distribution List"
@@ -1299,7 +1338,27 @@
       "check_detail": "CEK DETIL",
       "coin_adjustment_confirm": "Coin adjustment terakhir sudah pernah dilakukan untuk Task Sequencing ini pada tanggal {{date}}. Apakah mau melanjutkan proses pengajuan ini?",
       "requesting_preview": "Requesting Preview",
-      "task_sequencing_personalize": "Task Sequencing Personalize"
+      "task_sequencing_personalize": "Task Sequencing Personalize",
+      "group_audience": "Group Audience",
+      "coin": "Coin",
+      "cant_go_through": "Tidak dapat mengakses halaman ini secara langsung!!!",
+      "cant_coin_activity": "Tidak boleh ada activity coin jika misi tidak bertipe Push to FF",
+      "invalid_combination": "Kombinasi tipe verifikasi tidak diperbolehkan dalam satu task sequence",
+      "insufficient_budget": "Budget trade program tidak mencukupi!",
+      "notification_not_setted": "Ada notifikasi yang belum diset!",
+      "reward_non_coin": "Reward Hadiah (Non Coin)",
+      "description": "Keterangan",
+      "reward_description": "Keterangan Reward",
+      "popup_notif_settings": "Pengaturan Pop-up Notification",
+      "select_popup_notif": "Pilih Pop Up Notification",
+      "push_notif_settings": "Pengaturan Push Notification",
+      "waiting_time_settings": "Pengaturan Waktu Tunggu",
+      "day": "Hari",
+      "week": "Minggu",
+      "hour": "Jam",
+      "select_branch": "Select Branch",
+      "yes_branch": "Yes Branch",
+      "no_branch": "No Branch"
     },
     "task_verification": {
       "text1": "Task Verification",
@@ -1309,7 +1368,13 @@
       "text5": "Compliance Rate",
       "text6": "Periode Misi",
       "text7": "Audience Group",
-      "text8": "Status Coin"
+      "text8": "Status Coin",
+      "mission_verif_non_tsm": "Verifikasi Misi Non-TSM",
+      "mission_name_or_task_template": "Nama Misi/Template Tugas",
+      "change_schedule": "Ubah Tanggal Penjadwalan",
+      "mission_export": "Export Misi",
+      "verified_all": "Verified All",
+      "coin_release": "Release Coin"
     },
     "coin_disbursement": {
       "text1": "Coin Disbursement",
@@ -1557,7 +1622,22 @@
       "notification_type": "Tipe Notifikasi",
       "repeat_types": "Tipe Pengulangan",
       "create_custom_notification": "Buat Customized Notification",
-      "target_user": "Target User"
+      "target_user": "Target User",
+      "max_30_char": "Maksimal 30 karakter",
+      "birthday_notif_activation": "Aktivasi notifikasi ulang tahun",
+      "birthday_notif_18": "Aktivasi notifikasi ulang tahun ke-18",
+      "send_as_notif": "Kirim Sebagai Notifikasi",
+      "send_as_message": "Kirim Sebagai Pesan",
+      "message1": "Tanggal mulai tidak boleh sebelum hari ini!",
+      "message2": "Tanggal selesai harus setelah tanggal mulai!",
+      "message3": "Mohon cek kembali data yang diupload.",
+      "message4": "Notifikasi satu kali tidak dapat diedit, karena telah dikirim langsung saat dibuat.",
+      "not_end": "Tidak berakhir",
+      "end_after": "Berakhir setelah",
+      "ended_at": "Berakhir pada",
+      "repeat_at": "Pengulangan ke",
+      "consumer_type": "Tipe Konsumen",
+      "employee": "Employee"
     },
     "popup_notifikasi": {
       "page_name": "Popup Notifikasi",
